--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,15 @@
     <name>Hello World Spring Boot</name>
     <description>Spring Boot Hello World application</description>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.5</version> <!-- Define the Spring Boot version here -->
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <properties>
         <java.version>17</java.version>
-        <spring-boot.version>3.1.5</spring-boot.version>
     </properties>
 
     <dependencies>
