--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </parent>
 
     <properties>
-        <java.version>17</java.version> <!-- Ensure Java 17 is used -->
+        <java.version>21</java.version> <!-- Set Java 21 -->
     </properties>
 
     <dependencies>
@@ -38,14 +38,14 @@
 
     <build>
         <plugins>
-            <!-- Maven Compiler Plugin to ensure Java 17 is used for compilation -->
+            <!-- Maven Compiler Plugin to ensure Java 21 is used for compilation -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>17</source> <!-- Set the Java version for source -->
-                    <target>17</target> <!-- Set the Java version for target -->
+                    <source>21</source> <!-- Set Java 21 for source -->
+                    <target>21</target> <!-- Set Java 21 for target -->
                 </configuration>
             </plugin>
 
