--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </parent>
 
     <properties>
-        <java.version>21</java.version> <!-- Set Java 21 -->
+        <java.version>17</java.version> <!-- Set Java 17 -->
     </properties>
 
     <dependencies>
@@ -38,14 +38,15 @@
 
     <build>
         <plugins>
-            <!-- Maven Compiler Plugin to ensure Java 21 is used for compilation -->
+            <!-- Maven Compiler Plugin for Java 17 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.8.1</version> <!-- Use version 3.8.1 for compatibility -->
                 <configuration>
-                    <source>21</source> <!-- Set Java 21 for source -->
-                    <target>21</target> <!-- Set Java 21 for target -->
+                    <source>17</source> <!-- Set Java 17 for source -->
+                    <target>17</target> <!-- Set Java 17 for target -->
+                    <release>17</release> <!-- Force release version to 17 -->
                 </configuration>
             </plugin>
 
