--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,5 @@
 pipeline {
-    agent any  // Runs on the Jenkins server
+    agent any
 
     environment {
         REPO_URL = "https://github.com/divyaanshu0/Hello-world-project-java.git"
@@ -16,7 +16,7 @@ pipeline {
 
         stage('Build Java Application') {
             steps {
-                sh 'mvn clean package -DskipTests'  // Skip tests for faster build
+                sh 'mvn clean package -DskipTests'
             }
         }
 
@@ -32,15 +32,16 @@ pipeline {
             }
         }
 
-        
         stage('Deploy') {
             steps {
                 script {
                     sh '''
+                    echo "Stopping and removing any existing container..."
                     docker stop ${IMAGE_NAME} || true
                     docker rm ${IMAGE_NAME} || true
-                    docker pull ${DOCKER_HUB_USER}/${IMAGE_NAME}:${BUILD_NUMBER}
-                    docker run -d -p 8000:8000 --name ${IMAGE_NAME} ${DOCKER_HUB_USER}/${IMAGE_NAME}:${BUILD_NUMBER}
+
+                    echo "Running the new container..."
+                    docker run -d -p 8000:8000 --name ${IMAGE_NAME} ${IMAGE_NAME}:${BUILD_NUMBER}
                     '''
                 }
             }
